fix: restore box shadow for vehicle card and adjust border styles for improved dark mode support

--- a/Vehicle/static/css/vehicle.css
+++ b/Vehicle/static/css/vehicle.css
@@ -12,7 +12,7 @@
     max-height: 80vh;
     overflow-y: auto;
     background: white;
-    /* box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); */
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     padding: 10px;
     z-index: 1;
@@ -33,11 +33,18 @@
   }
 
   .vehicle-card {
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #000000d0;
+    border-top: 1px solid #000000d0;
     padding: 10px;
     border-radius: 10px;
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
   }
+  
+  .dark-mode .vehicle-card {
+    border-bottom: 1px solid #ccc;
+    border-top: 1px solid #ccc;
+  }
+
   .vehicle-card:last-child {
     border-bottom: none;
   }
